# music-library

./: Cargo.toml  README.md  config.toml  schema.sql
.sqlx/: query-336b07ff9e7002aca9647f9f90a99067af797859ec8eab3dd1b6ce204ecf0f1c.json  query-78ea22ee85ae48fe9af106205ae9ba98442c6ae21dc0374795974cc54bc4293a.json  query-dbbe100c5852e3d18d8dc00bb90c2a2f54c0748f7bad9e1d5af1352f00aede5e.json
src/: app.rs  database.rs  error.rs  lib.rs  main.rs  popup.rs  popup_menu.rs  song.rs  text_box.rs  tui.rs
