[package]
name = "music-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
tokio = { version = "1.36.0", features = [ "full" ] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "mysql" ] }